--- a/Bloc4-GUI.csproj
+++ b/Bloc4-GUI.csproj
@@ -26,6 +26,7 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0" />
     <PackageReference Include="reactiveUI" Version="20.1.63" />
